<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_title"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/projectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_desc"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.315" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="409dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="#E0DFDF"
                android:gravity="center"
                android:text="@string/button_materials"
                android:textColor="@color/black"
                android:textSize="28sp"

                />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="109dp"
                android:backgroundTint="#E0DFDF"
                android:gravity="center"
                android:text="@string/button_tasks"
                android:textColor="@color/black"
                android:textSize="28sp"

                />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="194dp"
            android:layout_height="165dp"
            android:layout_marginBottom="50dp"
            android:indeterminateTint="#FF5722"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
